# exoscore

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/exoscore/: __init__.py  cli.py  models.py  report.py
src/exoscore/catalog/: __init__.py  exoplanets.py  stars.py
src/exoscore/scorer/: __init__.py  factors.py  habitability.py  zone.py
tests/: test_benchmark.py  test_catalog.py  test_core.py  test_factors.py  test_habitability.py  test_integration.py  test_models.py  test_zone.py
